// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SearchResultsItem should match snapshot for DM 1`] = `
<div
  className="search-item__container"
>
  <div
    className="date-separator"
  >
    <hr
      className="separator__hr"
    />
    <div
      className="separator__text"
    >
      <FormattedDate
        day="numeric"
        month="long"
        value={1502715365009}
        year="numeric"
      />
    </div>
  </div>
  <div
    className="post post--thread post--compact"
  >
    <div
      className="search-channel__name"
    >
      <FormattedMessage
        defaultMessage="Direct Message (with {username})"
        id="search_item.direct"
        values={
          Object {
            "username": "Other guy",
          }
        }
      />
    </div>
    <div
      className="post__content"
    >
      <div
        className="post__img"
      >
        <ProfilePicture
          hasMention={false}
          height="36"
          isBusy={false}
          isRHS={false}
          src="Some image path"
          status="hello"
          user={
            Object {
              "id": "user_id",
              "locale": "en",
              "username": "username",
            }
          }
          width="36"
        />
      </div>
      <div>
        <div
          className="post__header"
        >
          <div
            className="col col__name"
          >
            <strong>
              <UserProfile
                disablePopover={false}
                hasMention={false}
                isBusy={false}
                isRHS={false}
                overwriteImage=""
                overwriteName=""
                status="hello"
                user={
                  Object {
                    "id": "user_id",
                    "locale": "en",
                    "username": "username",
                  }
                }
              />
            </strong>
          </div>
          <div
            className="col"
          >
            <time
              className="search-item-time"
              dateTime="2017-12-14T18:15:28.290Z"
              title={2017-12-14T18:15:28.290Z}
            >
              <FormattedDate
                hour="2-digit"
                hour12={false}
                minute="2-digit"
                value={1502715365009}
              />
            </time>
            <span
              className="post__pinned-badge"
            >
              <FormattedMessage
                defaultMessage="Pinned"
                id="post_info.pinned"
                values={Object {}}
              />
            </span>
            <PostFlagIcon
              idCount={-1}
              idPrefix="searchPostFlag"
              isEphemeral={false}
              isFlagged={true}
              postId="id"
            />
          </div>
          <div
            className="col__controls"
          >
            <Connect(DotMenu)
              handleDropdownOpened={[Function]}
              idCount={-1}
              idPrefix="searchpost"
              isFlagged={true}
              post={
                Object {
                  "channel_id": "channel_id",
                  "create_at": 1502715365009,
                  "delete_at": 0,
                  "edit_at": 1502715372443,
                  "id": "id",
                  "is_pinned": true,
                  "message": "post message",
                  "original_id": "",
                  "parent_id": "",
                  "pending_post_id": "",
                  "props": Object {},
                  "root_id": "",
                  "type": "",
                  "update_at": 1502715372443,
                  "user_id": "user_id",
                }
              }
            />
            <CommentIcon
              commentCount={0}
              handleCommentClick={[Function]}
              id=""
              idCount={-1}
              idPrefix="searchCommentIcon"
              searchStyle="search-item__comment"
            />
            <a
              className="search-item__jump"
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Jump"
                id="search_item.jump"
                values={Object {}}
              />
            </a>
          </div>
        </div>
        <div
          className="search-item-snippet post__body"
        >
          <div
            className=" post--edited"
          >
            <Connect(PostMessageView)
              options={
                Object {
                  "mentionHighlight": false,
                  "searchTerm": "test",
                }
              }
              post={
                Object {
                  "channel_id": "channel_id",
                  "create_at": 1502715365009,
                  "delete_at": 0,
                  "edit_at": 1502715372443,
                  "id": "id",
                  "is_pinned": true,
                  "message": "post message",
                  "original_id": "",
                  "parent_id": "",
                  "pending_post_id": "",
                  "props": Object {},
                  "root_id": "",
                  "type": "",
                  "update_at": 1502715372443,
                  "user_id": "user_id",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SearchResultsItem should match snapshot for channel 1`] = `
<div
  className="search-item__container"
>
  <div
    className="date-separator"
  >
    <hr
      className="separator__hr"
    />
    <div
      className="separator__text"
    >
      <FormattedDate
        day="numeric"
        month="long"
        value={1502715365009}
        year="numeric"
      />
    </div>
  </div>
  <div
    className="post post--thread post--compact"
  >
    <div
      className="search-channel__name"
    />
    <div
      className="post__content"
    >
      <div
        className="post__img"
      >
        <ProfilePicture
          hasMention={false}
          height="36"
          isBusy={false}
          isRHS={false}
          src="Some image path"
          status="hello"
          user={
            Object {
              "id": "user_id",
              "locale": "en",
              "username": "username",
            }
          }
          width="36"
        />
      </div>
      <div>
        <div
          className="post__header"
        >
          <div
            className="col col__name"
          >
            <strong>
              <UserProfile
                disablePopover={false}
                hasMention={false}
                isBusy={false}
                isRHS={false}
                overwriteImage=""
                overwriteName=""
                status="hello"
                user={
                  Object {
                    "id": "user_id",
                    "locale": "en",
                    "username": "username",
                  }
                }
              />
            </strong>
          </div>
          <div
            className="col"
          >
            <PostFlagIcon
              idCount={-1}
              idPrefix="searchPostFlag"
              isEphemeral={false}
              isFlagged={true}
              postId="id"
            />
          </div>
          <div
            className="col__controls"
          >
            <Connect(DotMenu)
              handleDropdownOpened={[Function]}
              idCount={-1}
              idPrefix="searchpost"
              isFlagged={true}
              post={
                Object {
                  "channel_id": "channel_id",
                  "create_at": 1502715365009,
                  "delete_at": 0,
                  "edit_at": 1502715372443,
                  "id": "id",
                  "is_pinned": false,
                  "message": "post message",
                  "original_id": "",
                  "parent_id": "",
                  "pending_post_id": "",
                  "props": Object {},
                  "root_id": "",
                  "type": "",
                  "update_at": 1502715372443,
                  "user_id": "user_id",
                }
              }
            />
            <CommentIcon
              commentCount={0}
              handleCommentClick={[Function]}
              id=""
              idCount={-1}
              idPrefix="searchCommentIcon"
              searchStyle="search-item__comment"
            />
            <a
              className="search-item__jump"
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Jump"
                id="search_item.jump"
                values={Object {}}
              />
            </a>
          </div>
        </div>
        <div
          className="search-item-snippet post__body"
        >
          <div
            className=" post--edited"
          >
            <Connect(PostMessageView)
              options={
                Object {
                  "mentionHighlight": false,
                  "searchTerm": "test",
                }
              }
              post={
                Object {
                  "channel_id": "channel_id",
                  "create_at": 1502715365009,
                  "delete_at": 0,
                  "edit_at": 1502715372443,
                  "id": "id",
                  "is_pinned": false,
                  "message": "post message",
                  "original_id": "",
                  "parent_id": "",
                  "pending_post_id": "",
                  "props": Object {},
                  "root_id": "",
                  "type": "",
                  "update_at": 1502715372443,
                  "user_id": "user_id",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SearchResultsItem should match snapshot for deleted message with attachments by bot 1`] = `
<div
  className="search-item__container"
>
  <div
    className="date-separator"
  >
    <hr
      className="separator__hr"
    />
    <div
      className="separator__text"
    >
      <FormattedDate
        day="numeric"
        month="long"
        value={1502715365009}
        year="numeric"
      />
    </div>
  </div>
  <div
    className="post post--thread post--compact"
  >
    <div
      className="search-channel__name"
    />
    <div
      className="post__content"
    >
      <div
        className="post__img"
      >
        <ProfilePicture
          hasMention={false}
          height="36"
          isBusy={false}
          isRHS={false}
          src="Some image path"
          status="hello"
          user={
            Object {
              "id": "user_id",
              "locale": "en",
              "username": "username",
            }
          }
          width="36"
        />
      </div>
      <div>
        <div
          className="post__header"
        >
          <div
            className="col col__name"
          >
            <strong>
              <UserProfile
                disablePopover={true}
                hasMention={false}
                isBusy={false}
                isRHS={false}
                overwriteImage=""
                overwriteName={true}
                status="hello"
                user={
                  Object {
                    "id": "user_id",
                    "locale": "en",
                    "username": "username",
                  }
                }
              />
            </strong>
          </div>
          <div
            className="bot-indicator"
          >
            BOT
          </div>
          <div
            className="col"
          >
            <time
              className="search-item-time"
              dateTime="2017-12-14T18:15:28.290Z"
              title={2017-12-14T18:15:28.290Z}
            >
              <FormattedDate
                hour="2-digit"
                hour12={false}
                minute="2-digit"
                value={1502715365009}
              />
            </time>
          </div>
        </div>
        <div
          className="search-item-snippet post__body"
        >
          <div
            className=" post--edited"
          >
            <p>
              <FormattedMessage
                defaultMessage="(message deleted)"
                id="post_body.deleted"
                values={Object {}}
              />
            </p>
            <Connect(FileAttachmentList)
              compactDisplay={true}
              post={
                Object {
                  "channel_id": "channel_id",
                  "create_at": 1502715365009,
                  "delete_at": 0,
                  "edit_at": 1502715372443,
                  "file_ids": Array [
                    "id",
                    "id2",
                  ],
                  "id": "id",
                  "is_pinned": false,
                  "message": "post message",
                  "original_id": "",
                  "parent_id": "",
                  "pending_post_id": "",
                  "props": Object {
                    "from_webhook": true,
                    "override_username": true,
                  },
                  "root_id": "",
                  "state": "deleted",
                  "type": "",
                  "update_at": 1502715372443,
                  "user_id": "user_id",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
